src/objects/Subscription__c.object
<CustomObject>
    <fields>
        <fullName>Experience__c</fullName>
        <description>Marketing field populated through the URL perimeter pass to SF from MBA</description>
        <label>Experience</label>
        <picklist>
            <picklistValues>
                <fullName>New to eCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experienced with eCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switching from a Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A Web Designer/Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;m creating a store for a client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;m setting up a store for a client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set up a new online business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch from a difference ecommerce platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add an online store to my brick-and-mortar business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loyal Bigcommerce client adding another store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set up a store for a client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;m doing research as a student, app developer or job applicant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Experiment__c</fullName>
        <description>Marketing field populated through the URL parameter pass to SF from MBA</description>
        <inlineHelpText>Marketing field populated through the URL parameter pass to SF from MBA. Using to track notes from Staging to actual sub for MBA invoice paids.</inlineHelpText>
        <label>BA Experiment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <description>Populated by MBA.  Date the trial expires</description>
        <inlineHelpText>Populated by MBA.  Date the trial expires</inlineHelpText>
        <label>MBA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feb_Revenue__c</fullName>
        <label>BA Feb Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Free_Gold_Promo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When the Upsell team offers clients a free month on the Gold plan.</description>
        <label>zFree Gold Promo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GMV__c</fullName>
        <label>zGMV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Has_Partner_ID__c</fullName>
        <description>Used in reports to calculate how many subs had IDs.  Can be deleted once the channel partner reconciliation project is done</description>
        <formula>IF(ISBLANK( MBAPartnerID__c) = FALSE, 1, NULL)</formula>
        <label>zHas Partner ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hubspot_Score__c</fullName>
        <description>Formula that pulls the contact or lead HS score to the sub for list views</description>
        <formula>IF(ISBLANK( Contact__c ),Lead__r.Hubspot_Score__c,Contact__r.Hubspot_Score__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKT Hubspot Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hubspot_Score_at_Conversion__c</fullName>
        <description>Workflow populates what the parent record&apos;s HS score was when the sub went from trial to paid</description>
        <inlineHelpText>Workflow populates what the parent record&apos;s HS score was when the sub went from trial to paid</inlineHelpText>
        <label>MKT Hubspot Score at Conversion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hubspot_Score_at_Trial_Expiration__c</fullName>
        <description>Workflow populates what the parent record HS score was when the trial expired</description>
        <inlineHelpText>Workflow populates what the parent record HS score was when the trial expired</inlineHelpText>
        <label>MKT Hubspot Score at Trial Expiration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Marketing field populated through the URL perimeter pass to SF from MBA</description>
        <label>MBA Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Ad Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animals &amp; Pets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antiques and Collectibles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel &amp; Clothing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art &amp; Crafts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive &amp; Motorcross</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking &amp; Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer &amp; Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domain Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domain Registrar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gifts &amp; Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Beauty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &amp; Garden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewelry &amp; Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Hubspot_Score__c</fullName>
        <description>ask Miles</description>
        <label>zOld Initial Hubspot Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Totango_Score__c</fullName>
        <description>Wokflow populates the first time Totango sends a score to the sub</description>
        <label>zInitial Totango Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsTrial__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Value pushed from MBA and is used in a trigger to convert leads when it&apos;s unchecked. Can also be used to force the account rollups to recalculate</description>
        <inlineHelpText>Value pushed from MBA and is used in a trigger to convert leads when it&apos;s unchecked. Can also be used to force the account rollups to recalculate</inlineHelpText>
        <label>MBA Is Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <description>Formula converting sub status to a TRUE checkbox if = &quot;Active&quot; so it can be summarized in reports</description>
        <formula>ISPICKVAL( Status__c , &quot;Active&quot;)</formula>
        <inlineHelpText>Is the sub status active?</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Cancelled__c</fullName>
        <description>Formula converting sub status to a TRUE checkbox if &lt;&gt; &quot;Active&quot; so it can be summarized in reports</description>
        <formula>OR(
ISPICKVAL( Status__c , &quot;Cancelled&quot;),
ISPICKVAL( Status__c , &quot;Terminated&quot;),
ISPICKVAL( Status__c , &quot;Incomplete&quot;),
ISPICKVAL( Status__c , &quot;Fraud&quot;),
ISPICKVAL( Status__c , &quot;Pending&quot;),
ISPICKVAL( Status__c , &quot;Suspended&quot;)
)</formula>
        <inlineHelpText>Is the sub status cancelled, terminated, incomplete, fraud, pending, or suspended?</inlineHelpText>
        <label>Is Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_MaxSub__c</fullName>
        <description>Indicator that this is the accounts max subscription. Used for Hubspot, can be deprecated when deals integration is complete.</description>
        <formula>If( Id == Account__r.MaxSub_ID__c , true, false)</formula>
        <inlineHelpText>Indicator that this is the accounts max subscription. Used for Hubspot, can be deprecated when deals integration is complete.</inlineHelpText>
        <label>MKT Is MaxSub</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jan_Revenue__c</fullName>
        <label>BA Jan Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>July_Revenue__c</fullName>
        <label>BA July Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>June_revenue__c</fullName>
        <label>BA June revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LandingPage__c</fullName>
        <description>Marketing field populated through the URL parameter pass to SF from MBA</description>
        <inlineHelpText>Marketing field populated through the URL parameter pass to SF from MBA</inlineHelpText>
        <label>MKT Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Month_s_Date__c</fullName>
        <description>Used in Miles&apos; crazy last month&apos;s revenue calculations or something fancy like that</description>
        <formula>Date(IF(Month(Today())=1,Year(Today())-1,Year(Today())), IF(Month(Today())=1,12,Month(Today()) - 1),1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the date in the last month, used for reporting.</inlineHelpText>
        <label>REPORT Last Month&apos;s Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Month_s_Revenue__c</fullName>
        <description>Manually updated via dataloader at the beginning of each month so that the Last Month dashboard numbers have a value to pull</description>
        <label>zLast Month&apos;s Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Plan_Change_Date__c</fullName>
        <description>The last date a subscription had a plan dollar amount change. 

Note that this is not a field to report on historical events as it only contains the Last Plan Change date for a subscription and not a list of all previous plan change dates (i.e. if plan created 1/1/14, changes 2/1/14 once, again changes 3/1/14 --&gt; then field will display 3/1/14 date)</description>
        <formula>IF (ISBLANK(Previous_Product_Value__c) 
, IF (X1st_Upgrade_Product_Value__c &lt;&gt; Original_Plan_Value__c, X1st_Upgrade_Date__c , NULL) 
,IF ( MonthlyRecurringRevenue__c &lt;&gt; Previous_Product_Value__c, Previous_Upgrade_Date__c , NULL))</formula>
        <inlineHelpText>The last date a subscription had a plan dollar amount change. 

Note that this is not a field to report on historical events as it only contains the Last Plan Change date for a subscription and not a list of all previous plan change dates (i.e. if plan</inlineHelpText>
        <label>REPORT: Last Plan Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Plan_Change_Name__c</fullName>
        <description>The last plan name where the plan dollar amount changed. 

Note true historical as it will only contain the plan name prior to the current plan name if an upgrade/downgrade occurred.</description>
        <formula>IF (ISBLANK(Previous_Product_Value__c) 
  ,IF (X1st_Upgrade_Product_Value__c &lt;&gt; Original_Plan_Value__c,   Original_Plan_Purchased__c , NULL) 
    ,IF ( MonthlyRecurringRevenue__c &lt;&gt; Previous_Product_Value__c, Previous_Product_Name__c , NULL))</formula>
        <label>REPORT: Last Plan Change Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Plan_Downgrade__c</fullName>
        <description>Difference from current Monthly Recurring Revenue and previous Monthly Recurring Revenue where a dollar amount change occurred resulting in an decrease in MRR</description>
        <formula>IF (ISBLANK(Previous_Product_Value__c) 
, IF (X1st_Upgrade_Product_Value__c &lt; Original_Plan_Value__c 
, X1st_Upgrade_Product_Value__c-Original_Plan_Value__c, NULL) 
,IF ( MonthlyRecurringRevenue__c &lt; Previous_Product_Value__c 
, MonthlyRecurringRevenue__c-Previous_Product_Value__c, NULL))</formula>
        <label>REPORT: Last Plan Downgrade</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Plan_Upgrade__c</fullName>
        <description>Difference from current Monthly Recurring Revenue and previous Monthly Recurring Revenue where a dollar amount change occurred resulting in an increase in MRR</description>
        <formula>IF (ISBLANK(Previous_Product_Value__c) 
, IF (X1st_Upgrade_Product_Value__c &gt; Original_Plan_Value__c 
, X1st_Upgrade_Product_Value__c - Original_Plan_Value__c, NULL) 
,IF ( MonthlyRecurringRevenue__c &gt; Previous_Product_Value__c 
, MonthlyRecurringRevenue__c - Previous_Product_Value__c, NULL))</formula>
        <label>REPORT: Last Plan Upgrade</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Launch_Date__c</fullName>
        <description>WFR populating SSC session date if consultation outcome = Launched</description>
        <inlineHelpText>Date the store was fully launched by the Success Squad</inlineHelpText>
        <label>zLaunch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Launch_Team_Commando_OLD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>success squad unpacking team</description>
        <label>zLaunch Team Commando OLD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Subscriptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Launch_Team_Commando__c</fullName>
        <formula>Account__r.Ltc__r.Full_Name__c</formula>
        <label>zLaunch Team Commando</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Active_Trial_Count__c</fullName>
        <description>Pulls value of the lead field for list views</description>
        <formula>Lead__r.Active_Trials__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls value of the lead field for list views</inlineHelpText>
        <label>REPORT Lead Active Trial Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Converted__c</fullName>
        <description>Formula to show which subs are associated to a converted lead</description>
        <formula>IF(  ISBLANK( Lead__c ) = FALSE &amp;&amp;  Lead__r.IsConverted = TRUE, TRUE,FALSE)</formula>
        <inlineHelpText>Formula to show which subs are associated to a converted lead</inlineHelpText>
        <label>REPORT Lead Converted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Hubspot_Score_Difference__c</fullName>
        <description>Pulls HS score delta to the lead - assume it&apos;s for list views or marketing reports</description>
        <formula>Lead__r.Hubspot_Score_Difference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zLead Hubspot Score Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Hubspot_Score__c</fullName>
        <description>Pulls HS score to the lead - assume it&apos;s for list views or marketing reports</description>
        <formula>Lead__r.Hubspot_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zLead Hubspot Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_ID__c</fullName>
        <description>Pulls lead ID into sub for reporting</description>
        <formula>Lead__r.Lead_Unique_ID__c</formula>
        <inlineHelpText>Salesorce Lead ID</inlineHelpText>
        <label>zLead Salesforce ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Initial_Hubspot_Score__c</fullName>
        <description>Pulls initial HS score to the lead - assume it&apos;s for list views or marketing reports</description>
        <formula>Lead__r.Initial_Hubspot_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zLead Initial Hubspot Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Last_Activity__c</fullName>
        <description>Think this is used for list views; may be able to delete</description>
        <formula>Lead__r.LastActivityDate</formula>
        <label>zLead Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Owner__c</fullName>
        <description>not sure if this is used anymore.</description>
        <formula>IF( Account__c = NULL &amp;&amp; Lead__c &lt;&gt; NULL,  Lead__r.Owner:User.Full_Name__c  , NULL )</formula>
        <label>Lead Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Stage__c</fullName>
        <description>For list views so reps know the lead stage</description>
        <formula>TEXT(Lead__r.Stage__c)</formula>
        <label>zLead Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lifetime_GMV__c</fullName>
        <description>Lifetime GMV from the BI Data object</description>
        <inlineHelpText>Lifetime GMV, rolled up from the BI Data object</inlineHelpText>
        <label>Lifetime GMV</label>
        <summarizedField>BI_Data__c.Lifetime_GMV__c</summarizedField>
        <summaryForeignKey>BI_Data__c.Subscription__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MBAAccountID__c</fullName>
        <description>Unique identifier from MBA of account/user.  ID of the account which owns this subscription</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique identifier from MBA of account/user.  ID of the account which owns this subscription</inlineHelpText>
        <label>MBA Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBAClientID__c</fullName>
        <description>Unique identifier from MBA of user; should match the MBA Account ID until the integration is changed to also bring in contacts for people other than the primary in MBA</description>
        <label>zMBA Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBAPartnerID__c</fullName>
        <description>Used to map Partner Source from MBA.  The iDev Affiliate ID of the partner, if this subscription is attributed to one</description>
        <label>MBA Partner ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBASubscriptionID__c</fullName>
        <description>ID specific to the store/product purchased</description>
        <externalId>true</externalId>
        <label>MBA Subscription ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MBA_Channel_Partner__c</fullName>
        <description>used for reconciliation of iDev cookies. can be deleted after reconciliation project is done</description>
        <label>MBA Channel Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBA_Partner_ID_Reconciliation__c</fullName>
        <label>MBA Partner ID Reconciliation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MBA_Subscription_ID_Size__c</fullName>
        <formula>LEN( MBASubscriptionID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MBA Subscription ID Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MKT_PROMO_Free_Theme__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check when client received a free theme.</inlineHelpText>
        <label>zMKT PROMO-Free Theme</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>March_Revenue__c</fullName>
        <label>BA March Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MarketingCampaign__c</fullName>
        <description>Marketing field populated through the URL parameter pass to SF from MBA</description>
        <inlineHelpText>Marketing field populated through the URL parameter pass to SF from MBA</inlineHelpText>
        <label>MKT MBA Marketing Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketingSource__c</fullName>
        <description>Marketing field populated through the URL parameter pass to SF from MBA</description>
        <inlineHelpText>Marketing field populated through the URL parameter pass to SF from MBA</inlineHelpText>
        <label>MKT MBA Marketing Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Test_Group__c</fullName>
        <description>Marketing test group field</description>
        <inlineHelpText>Marketing test group field</inlineHelpText>
        <label>MKT Marketing Test Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>May_revenue__c</fullName>
        <label>BA May revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Migration_Case_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EIG migration field.  Populated during case insert (dataloader) to indicate that the case creation is complete</description>
        <label>zMigration Case Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_Request_Date__c</fullName>
        <description>Migration Request Date for Orion coming from MBA</description>
        <label>Migration Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Migration_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated by Success Squad.  Not sure what criteria are</description>
        <label>zMigration Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated via workflow if the sub Product name ever contains &quot;Migration&quot;</description>
        <inlineHelpText>Was this store ever a Migration product?</inlineHelpText>
        <label>zMigration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month_to_Date_Cancellation__c</fullName>
        <description>Did the cancellation happen in this month?</description>
        <formula>DAY(  CancellationDate__c  )&lt;=DAY(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Did the cancellation happen in this month?</inlineHelpText>
        <label>BA Month-to-Date Cancellation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month_to_Date_Purchases__c</fullName>
        <description>Did the purchase happen this month?</description>
        <formula>DAY( PurchaseDate__c )&lt;=DAY(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Did the purchase happen this month?</inlineHelpText>
        <label>BA Month-to-Date Purchases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month_to_Date_Trial_Sign_Up__c</fullName>
        <description>Did the trial start this month?</description>
        <formula>DAY(  StartDate__c )&lt;=DAY(TODAY()) &amp;&amp;  Was_Trial__c = TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Did the trial start this month?</inlineHelpText>
        <label>BA Month-to-Date Trial Sign Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MonthlyRecurringRevenue__c</fullName>
        <description>Monthly value of plan regardless of billing cycle. Sent from MBA</description>
        <inlineHelpText>Monthly value of plan regardless of billing cycle and amount</inlineHelpText>
        <label>Monthly Recurring Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Product_Plan__c</fullName>
        <formula>IF( ProductID__c =&apos;65&apos;, &apos;Silver NEXT&apos;, 
IF(ProductID__c =&apos;90&apos;, &apos;Silver NEXT v2 (29.95)&apos; , 
IF (ProductID__c =&apos;66&apos;, &apos;Gold NEXT&apos; , 
IF (ProductID__c =&apos;67&apos;, &apos;Platinum NEXT&apos; ,  
IF (ProductID__c =&apos;118&apos;, &apos;Standard Plan&apos; ,  
IF (ProductID__c =&apos;119&apos;, &apos;Plus Plan&apos; ,  
IF (ProductID__c =&apos;101&apos;, &apos;Standard&apos; , 
Product__c ) ))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Product Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <description>Was used by Acq on forecast subs but can probably be deleted now</description>
        <label>zNext Steps</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Longer_with_Company__c</fullName>
        <formula>Contact__r.No_longer_with_the_company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Longer with Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_English_Speaking__c</fullName>
        <description>For list views and reports</description>
        <formula>Lead__r.Non_English_Speaking__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zNon English Speaking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>November_Revenue__c</fullName>
        <description>Nov Revenue only on admin layout</description>
        <label>BA November Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Orders__c</fullName>
        <label>zNumber of Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>October_Revenue__c</fullName>
        <description>Oct Revenue, only on Admin layout</description>
        <label>BA October Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Offered_Time_By_Hour__c</fullName>
        <formula>CASE( VALUE(MID(TEXT( Created_Date_Time__c ),12,2)) , 
0, 18, 
1, 19, 
2, 20, 
3, 21, 
4, 22, 
5, 23, 
6, 0, 
7, 1, 
8, 2, 
9, 3, 
10, 4, 
11, 5, 
12, 6, 
13, 7, 
14, 8, 
15, 9, 
16, 10, 
17, 11, 
18, 12, 
19, 13, 
20, 14, 
21, 15, 
22, 16, 
23, 17, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offered Time - By Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Was used by Acq on forecast subs but can probably be deleted now</description>
        <label>zOpportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ops_Notes__c</fullName>
        <description>Place for ops to put notes regarding changes manually made to the sub, usually around ownership changes</description>
        <label>zOps Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original_Plan_Purchased__c</fullName>
        <description>Workflow captures first plan name so it can be used in upgrade comparisons</description>
        <label>Original Plan Purchased</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Plan_Value__c</fullName>
        <description>Workflow captures first plan value/MRR so it can be used in upgrade comparisons</description>
        <label>Original Plan Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Pricing_Test_Group__c</fullName>
        <formula>IF( (PricingTestGroup__c = &apos;NEXT&apos;) &amp;&amp;  StartDate__c &lt;  DATEVALUE(&quot;2014-05-01&quot;)  ,&apos;PTP Group 2&apos; ,  
 IF( ProductID__c =&apos;59&apos; &amp;&amp; StartDate__c &gt;  DATEVALUE(&quot;2014-05-01&quot;)  , &apos;NEXT&apos;, 
PricingTestGroup__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MKT PTP Pricing Test Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Owner_Team__c</fullName>
        <description>Pulls the owner department value from the account or lead record. Used in workflow to notify when new subs are owned by a partner rep but account is owned by direct https://na13.salesforce.com/01Qa0000000VpJf</description>
        <formula>IF( Account__c &lt;&gt; NULL, Account__r.Owner.Department ,
IF( Lead__c &lt;&gt; NULL,  Lead__r.Owner:User.Department , NULL
))</formula>
        <label>Parent Owner Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Owner__c</fullName>
        <description>If the sub is associated to an account, this pulls the account owner, if not and has a lead, pulls lead owner.  For reporting and list views</description>
        <formula>IF( Account__c &lt;&gt; NULL , Account__r.Owner.Full_Name__c , Lead__r.Owner:User.Full_Name__c )</formula>
        <label>Parent Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>For the PRM Portal &quot;Create a Trial&quot; submission form.  Do not delete unless there is no longer a need to use that form to send SF data to MBA in order to create a new trial</description>
        <label>zInitial Store Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>